# bf42plusplus

./: .gitmodules  CMakeLists.txt  bf42plus.vcxproj  bf42plus.vcxproj.filters  gen-gitversion.bat
.github/workflows/: windows-build-msvc.yml
libs/tracy/client/: TracyProfiler.cpp
res/: bf42plus.def
src/: bfhook.cpp  debug.cpp  dllmain.cpp  hooks.h  loader.cpp  pch.h  profiling.cpp  profiling.h  settings.cpp  settings.h  updater.cpp  updater.h  util.cpp  util.h  version.h
src/bf/: console.cpp  console.h  gameevent.cpp  gameevent.h  generic.cpp  generic.h  net.cpp  object.cpp  object.h  renderer.cpp  stl.cpp  ui.cpp  ui.h
